--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = []
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "^=3.12"
 flask = "^3.0.2"
 flask-sqlalchemy = "^3.1.1"
 psycopg2 = "^2.9.9"
